--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Broker Onion Service</h4>
-                        <p class="text-muted">We provide a way for host's to create a 'Broker Onion-Service'--a BOS--
+                        <p class="text-muted">We provide a way for hosts to create a 'Broker Onion-Service'--a BOS--
                             that our user meets with at a rendezvous before then meeting at yet another rendesvous to transfer the message to the host. </p>
                     </div>
                     <div class="col-md-6">
@@ -114,7 +114,9 @@
                     
                     <p>Here's a sketch outlining the architecture of our onion rings project — because planning is everything!</p>
 
+                    <br><br>
                     <p><img src= assets/img/architecture.png></p>
+                    <br><br>
 
                     <p>We documented the project in <a href="https://github.com/Kh-ra/onion-rings">Github</a> so that anyone can contribute to it and so that we could easily
                         collaborate with each other. <br><a href="https://github.com/Kh-ra/onion-rings">Click here to learn more about it.</a></p>
@@ -173,7 +175,7 @@
 
                     <br><br><br>
 
-                    <p>In order to save the output of our triggered function, we added a binding:</p>
+                    <p>In order to save the output of our triggered function, we added a binding to complete the first part of the project:</p>
 
                     <br><br>
 
@@ -183,7 +185,7 @@
                                 <i class="fas fa-circle fa-stack-2x text-primary"></i>
                                 <i class="fas fa-clock fa-stack-1x fa-inverse"></i>
                             </span>
-                            <h4 class="my-3">Timer Trigger</h4>
+                            <h4 class="my-3">Timer Trigger</h4> 
                             <p class="text-muted">Using Cron notation, everyday at 3am</p>
                         </div>
                         <div class="col-md-1">
